# word-counter

./: .gitignore  README.md
.github/workflows/: main.yml
infrastructure/: database.tf  deployment.tf  eks.tf  vars.tf  vpc.tf
word_counter/: Dockerfile  Makefile  docker-compose.yaml  local.env  pyproject.toml
word_counter/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
word_counter/tests/: conftest.py  test_crud.py  test_main.py  tests.sh
