[tool.poetry]
name = "word-counter"
version = "0.1.0"
description = ""
authors = ["Juliana Karoline <julianaklulo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.23"
async-exit-stack = "^1.0.1"
async_generator = "^1.10"
requests = "^2.26.0"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
pytest = "^6.2.4"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"